--- a/resources/my.cnf
+++ b/resources/my.cnf
@@ -11,7 +11,7 @@ user                           = mysql
 default-storage-engine         = InnoDB
 socket                         = /var/lib/mysql/mysql.sock
 pid-file                       = /var/lib/mysql/mysql.pid
-bind-address = 0.0.0.0
+bind-address                   = 0.0.0.0
 
 # MyISAM #
 key-buffer-size                = 32M
@@ -44,8 +44,9 @@ tmp-table-size                 = 32M
 max-heap-table-size            = 32M
 query-cache-type               = 0
 query-cache-size               = 0
+max_connections                = 500
 max-connections                = 500
-thread-cache-size              = 50
+thread-cache-size              = 128
 open-files-limit               = 65535
 table-definition-cache         = 4096
 table-open-cache               = 4096
@@ -59,7 +60,7 @@ innodb-file-per-table          = 1
 innodb-buffer-pool-size        = 400M
 
 # LOGGING #
-log-error                      = /var/lib/mysql/mysql-error.log
+#log-error                      = /var/lib/mysql/mysql-error.log
 log-queries-not-using-indexes  = 1
 slow-query-log                 = 1
 slow-query-log-file            = /var/lib/mysql/mysql-slow.log
